# MPI_Testing

./: .gitignore  CMakeLists.txt  README.md
Example1/: CMakeLists.txt  Example1.vcxproj  main.cpp
GameOfLife/: CMakeLists.txt  GameOfLife.vcxproj  GameOfLife.vcxproj.filters  MPIImplementation.h  SerialImplementation.h  main.cpp
GameOfLife/src/: Constants.h  Exo2.h  Exo3.h  Exo4.h  Exo5.h  Exo6.h  MPIImplementation.h  Utilities.h  main.cpp
